# flt

./: .atlas  .gitignore  .template-meta.json  CLAUDE.md  Dockerfile.test  Justfile  README.md  UNAVAILABLE_FEATURES.md  agent.md  biome.json  flights-erd.mmd  package.json  vite.config.ts  wrangler.toml
.github/workflows/: docs.yml
api/: main.py  pyproject.toml
api/flights_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
api/routes/: __init__.py  airports.py  flights.py
apps/cli/: README.md  package.json  vitest.config.ts
apps/cli/completions/: _flt  flt.bash
apps/cli/src/: config.ts  filter.ts  format.ts  index.ts  learnings.test.ts  learnings.ts  legend.ts  pdf-map.ts  pdf.ts  state.test.ts  state.ts  types.ts  validate.ts
apps/mcp/: package.json  tsconfig.json
apps/mcp/scripts/: smoke.ts
apps/mcp/src/: index.ts  shared.test.ts  shared.ts
apps/tui/: README.md  package.json  tsconfig.json
apps/tui/src/: animate.ts  commands.ts  demo.ts  format.ts  index.ts  parse.ts  terminal-kit.d.ts  terminal.ts
apps/web/: CLAUDE.md  Justfile  README.md  agent.md  biome.json  package.json  svelte.config.js
apps/web/src/: app.html  hooks.server.ts
data/: build.ts
docs/: .gitignore  package.json  svelte.config.js
docs/src/: app.html
docs/src/routes/: +layout.svelte  (+1 more)
docs/static/: agent-session.html
scripts/: build-cli.ts
src/: app.css  app.html  hooks.server.ts
src/cli/: config.ts  filter.ts  index.ts  state.test.ts  state.ts  types.ts  validate.ts
src/lib/: api.ts  recent-searches.ts  types.ts
src/routes/: +layout.svelte  +page.svelte
(+104 files in other folders)
