[project]
name = "flights-api"
version = "0.1.0"
description = "FastAPI wrapper for fast-flights"
requires-python = ">=3.11"
dependencies = [
    "airportsdata>=20260208",
    "fast-flights",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
]

[tool.uv]
dev-dependencies = []

[tool.uv.sources]
fast-flights = { path = "../../fast-flights" }
